create homepage with welcome message

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>About</title>
+    <title>Homepage</title>
 </head>
 <body>
-    <h1>{{ pageTitle }}</h1>
-    <p>New paragraph in hbs</p>
+    <h1> {{ pageTitle }}</h1>
+    <p> {{ welcomeMessage }}</p>
 </body>
 <footer>
     <p>Copyright &copy {{ currentYear }}</p>
