--- a/views/about.hbs
+++ b/views/about.hbs
@@ -7,10 +7,8 @@
     <title>About</title>
 </head>
 <body>
-    <h1>{{ pageTitle }}</h1>
+    {{> header }}
     <p>New paragraph in hbs</p>
+    {{> footer }}
 </body>
-<footer>
-    <p>Copyright &copy {{ currentYear }}</p>
-</footer>
 </html>
